--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Welcome BookMarket</title>
@@ -12,7 +12,7 @@
 <main>
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+            <a href="/static" class="d-flex align-items-center text-body-emphasis text-decoration-none">
                 <svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M5 4C5 3.44772 5.44772 3 6 3V21C5.44772 21 5 20.5523 5 20V4ZM8 21V3H19V21H8ZM7 23H6C4.34315 23 3 21.6569 3 20V4C3 2.34315 4.34315 1 6 1H7H19C20.1046 1 21 1.89543 21 3V21C21 22.1046 20.1046 23 19 23H7Z" fill="#000000"/>
                 </svg>
@@ -28,15 +28,17 @@
         </div>
 
         <div class="row align-items-md-stretch text-center">
-            <div class="col-md-12">
-                <div class="h-100 p-5">
-                    <h2>Welcome to Web Market</h2>
-                </div>
+            <div class="col-md-4" th:each="book : ${bookList}">
+                <h3 th:text="${book.getName()}"></h3>
+                <p th:text="${book.getAuthor()}"></p>
+                <p th:text="${book.getPublisher()} + ' | ' + ${book.getReleaseDate()}"></p>
+                <p align="left" th:text="${book.getDescription()}"></p>
+                <p th:text="${book.getUnitPrice()} + '원'"></p>
             </div>
         </div>
 
         <footer class="pt-3 mt-4 text-body-secondary border-top">
-            <span class = "text-body-secondary">&copy; 2025 BookMarket</span>
+            <span class="text-body-secondary">&copy; 2025 BookMarket</span>
         </footer>
     </div>
 </main>
