--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome BookMarket</title>
+    <title>도서 상세 정보</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -12,33 +12,36 @@
 <main>
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom">
-            <div class="container d-flex flex-wrap justify-content-center">
-            <a href="/BookMarket/home" class="d-flex align-items-center text-body-emphasis text-decoration-none mb-3 mb-lg-0 me-lg-auto">
+            <a href="/BookMarket/home" class="d-flex align-items-center text-body-emphasis text-decoration-none">
                 <svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M5 4C5 3.44772 5.44772 3 6 3V21C5.44772 21 5 20.5523 5 20V4ZM8 21V3H19V21H8ZM7 23H6C4.34315 23 3 21.6569 3 20V4C3 2.34315 4.34315 1 6 1H7H19C20.1046 1 21 1.89543 21 3V21C21 22.1046 20.1046 23 19 23H7Z" fill="#000000"/>
                 </svg>
                 <span class="fs-4">&nbsp;BookMarket</span>
             </a>
-            <a href="/BookMarket/books/IT전문서" class="nav-link">IT전문서 </a>&nbsp;|&nbsp;
-            <a href="/BookMarket/books/IT교재" class="nav-link"> IT교재</a>
-            </div>
         </header>
 
         <div class="p-5 mb-4 bg-body-tertiary rounded-3">
             <div class="container-fluid py-5">
-                <h1 class="display-5 fw-bold">Welcome to My BookMarket</h1>
+                <h1 class="display-5 fw-bold">도서 상세 정보</h1>
                 <p class="col-md-8 fs-4">BookMarket</p>
             </div>
         </div>
 
-        <div class="row align-items-md-stretch text-center">
-            <div class="col-md-4" th:each="book : ${bookList}">
+        <div class="row align-items-md-stretch">
+            <div class="col-md-12">
                 <h3 th:text="${book.getName()}"></h3>
-                <p th:text="${book.getAuthor()}"></p>
-                <p th:text="${book.getPublisher()} + ' | ' + ${book.getReleaseDate()}"></p>
-                <p th:text="${book.getDescription()}" align="left" ></p>
-                <p th:text="${book.getUnitPrice()} + '원'"></p>
-                <p><a th:href="'/BookMarket/books/book?id='+${book.getBookId()}" class="btn btn-secondary" role="button">상세정보 &raquo;</a></p>
+                <p th:text="${book.getDescription()}"></p>
+                <br>
+                <p><b>도서코드: </b><span  th:text="${book.getBookId()}" class="badge text-bg-info"></span></p>
+                <p><b>저자: </b><span  th:text="${book.getAuthor()}"></span></p>
+                <p><b>출판사: </b><span  th:text="${book.getPublisher()}"></span></p>
+                <p><b>출판일: </b><span  th:text="${book.getReleaseDate()}"></span></p>
+                <p><b>분류: </b><span  th:text="${book.getCategory()}"></span></p>
+                <p><b>재고량: </b><span  th:text="${book.getUnitsStock()}"></span></p>
+                <h4 th:text="'가격: ' + ${book.getUnitPrice()} + '원'"></h4>
+                <br>
+                <p><a href="#" class="btn btn-primary">도서 주문 &raquo;</a></p>
+                <p><a href="/BookMarket/books" class="btn btn-secondary" role="button">도서목록 &raquo;</a></p>
             </div>
         </div>
 
