--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -82,7 +82,10 @@
                <div class="mb-3 row">
                    <label class="col-sm-2 control-label">재고량</label>
                    <div class="col-sm-3">
-                       <input type="text" name="unitsStock" class="form-control" th:field = "*{unitsStock}"/>
+                       <input type="text" name="unitsInStock" class="form-control" th:field = "*{unitsInStock}"/>
+                   </div>
+                   <div class = "col-sm-6">
+                       <p class="text-danger" th:errors="*{unitsInStock}"/>
                    </div>
                </div>
                <div class="mb-3 row">
